--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Create kind cluster
         uses: helm/kind-action@v1.4.0
         with:
-          config: connector/testfiles/kind-config.yaml
+          config: testfiles/kind-config.yaml
       - name: Validate Kind Cluster
         run: |
           echo "let kind get up and running"
