--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,6 +15,8 @@ jobs:
     env:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USER }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+      CA_SUB: ${{ env.CA_SUB }}
+      IMAGE_REPO: ${{ env.IMAGE_REPO }}
     steps:
       - name: Set up Go 1.x
         uses: actions/setup-go@v3
