--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -92,7 +92,9 @@ jobs:
           export BUILD_VERSION=$(cat out/BUILD_VERSION.txt)
           export IMAGE_TAG=$BUILD_VERSION
           echo $BUILD_VERSION 
-          
+          echo $IMAGE_REPO 
+          echo $DOCKER_USERNAME
+          echo $DOCKER_PASSWORD
           docker login $IMAGE_REPO -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
           make tag
           make push
