--- a/testfiles/relayserver.yaml
+++ b/testfiles/relayserver.yaml
@@ -3,14 +3,19 @@ kind: Service
 metadata:
   name: relayserver
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     type: relayserver
   ports:
     - protocol: TCP
       port: 8443
-      nodePort: 30883
       targetPort: 8443
+    - protocol: TCP
+      port: 1701
+      targetPort: 1701
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
 ---
 
 apiVersion: v1
@@ -25,7 +30,9 @@ spec:
   restartPolicy: Never
   containers:
     - name: relayserver
-      image: theotw/k8srelayserver:latest
+      image: theotw/k8srelaytest:dev
+      command:
+        - ./run_relay_server_coverage.sh
       imagePullPolicy: Always
       env:
         - name: NATS_SERVER_URL
