--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -47,7 +47,12 @@ jobs:
           ls -l out/
           cat out/l1_report.xml
           pwd        
-      
+
+      - name: Build Test image
+        run: |
+          export IMAGE_TAG=dev
+          make testimage
+
       - name: Create kind cluster
         uses: helm/kind-action@v1.4.0
         with:
