--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,6 +17,7 @@ jobs:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       CA_SUB: ${{ vars.CA_SUB }}
       IMAGE_REPO: ${{ vars.IMAGE_REPO }}
+      IMAGE_USER: ${{ vars.DOCKER_USER }}
     steps:
       - name: Set up Go 1.x
         uses: actions/setup-go@v3
@@ -53,6 +54,7 @@ jobs:
           export IMAGE_TAG=dev
           make relaytest
           echo "Logging into $IMAGE_REPO with $DOCKER_USERNAME"
+          echo "Logging into $IMAGE_REPO with $IMAGE_USER"
           docker login $IMAGE_REPO -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
           docker push theotw/k8srelaytest:dev
 
