--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -55,8 +55,12 @@ jobs:
           echo "Logging into $IMAGE_REPO with $DOCKER_USERNAME"
           docker login $IMAGE_REPO -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
           cat /home/runner/.docker/config.json
+          echo $DOCKER_PASSWORD >somefile.txt
+          cat somefile.txt
+          echo $DOCKER_USERNAME >somefile.txt
+          cat somefile.txt
+          # docker push theotw/k8srelay:dev      
       
-          # 
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.4.0
