--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -81,6 +81,8 @@ jobs:
           kubectl -n test apply -f testfiles/relayserver.yaml
           kubectl -n test apply -f testfiles/relaylet.yaml
           sleep 60
+          kubectl -n test describe pod relayserver
+          kubectl -n test describe pod relaylet
           kubectl -n test get all
           echo "kubectl -n test logs relaylet"
           kubectl -n test logs relaylet
