fixed bad var ref and moved login specifc

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -53,7 +53,7 @@ jobs:
           export IMAGE_TAG=dev
           make relaytest
           echo "Logging into $IMAGE_REPO with $DOCKER_USERNAME"
-          docker login $IMAGE_REPO -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+          docker login $IMAGE_REPO/k8srelaytest -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
           docker push $IMAGE_REPO/k8srelaytest:dev      
       
 
