--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -49,12 +49,15 @@ jobs:
           pwd        
 
       - name: Build Test image
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           export IMAGE_TAG=dev
           make relaytest
           echo "Logging into $IMAGE_REPO with $DOCKER_USERNAME"
-          docker login $IMAGE_REPO/k8srelaytest -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-          docker push $IMAGE_REPO/k8srelaytest:dev      
+          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+          docker push theotw/k8srelaytest:dev      
       
 
       - name: Create kind cluster
